@@ -1,3 +1,11 @@
+2002-08-09  Terry Biggs <tbiggs@users.sourceforge.net>
+
+	* changed preferences file to preferences-1.0.conf
+	* if preferences-1.0.conf does not exist checks for
+	  preferences.conf and loads it. It will then be saved
+	  as preferences-1.0.conf.
+
+
 2002-08-08  Terry Biggs <tbiggs@users.sourceforge.net>
 
 	* added main/search.*
